--- a/CS481HW6/MainPage.xaml
+++ b/CS481HW6/MainPage.xaml
@@ -3,7 +3,7 @@
     <StackLayout BackgroundColor="#FFFFF">
         <!-- Place new controls here -->
         <Label Text="Mobile Pocket Dictionary" HorizontalOptions="Center" VerticalOptions="Start" TextColor="Black" FontFamily="BebasNeue-Regular.ttf#BebasNeue-Regular" FontSize="Title"/>
-        <Entry x:Name="input" Text="type here" TextColor="#7C7287" FontFamily="BebasNeue-Regular.ttf#BebasNeue-Regular"/>
+        <Entry x:Name="input" Text="search word" TextColor="#7C7287" FontFamily="BebasNeue-Regular.ttf#BebasNeue-Regular"/>
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition></RowDefinition>
